--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/aviwembekeni/bootcamp-terminal-tests.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "aviwe",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/aviwembekeni/bootcamp-terminal-tests/issues"
