--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bootcamp-terminal-tests",
   "version": "1.0.0",
   "description": "",
-  "main": "countAllFromTown.js",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
